# fastnote

./: Cargo.toml
src/: error.rs  main.rs  models.rs
src/db/: database.rs
src/error/: note_error.rs
src/models/: note.rs
